fix: cart with visible buttons on focus

--- a/packages/shared/styles/components/organisms/SfCollectedProduct.scss
+++ b/packages/shared/styles/components/organisms/SfCollectedProduct.scss
@@ -18,6 +18,9 @@
     opacity: var(--collected-product-remove-opacity);
     right: var(--collected-product-remove-right, var(--spacer-xs));
     transition: var(--collected-product-remove-transition);
+    &:focus {
+      --collected-product-remove-opacity: 1;
+    }
     &--circle-icon {
       top: var(--collected-product-remove-top);
       display: var(--collected-product-remove-circle-icon-display, none);
@@ -107,11 +110,6 @@
           --collected-product-box-shadow,
           0px 4px 11px rgba(var(--c-dark-base), 0.1)
         );
-      }
-    }
-    &__remove {
-      &:focus {
-        --collected-product-remove-opacity: 1;
       }
     }
     &__aside {
